tests/paczka1/small_fuzzy/32299591.err
Error in line 1: DV41M A168 87,4
Error in line 3: A445 A168 72,0
Error in line 11: DV41M A168 25,3
Error in line 15: QL0 S621 76,0
